# hw_for_mlops

./: .gitignore  README.md  pyproject.toml
.dvc/: config
data/: test-images.gz.dvc  test-labels.gz.dvc  train-images.gz.dvc  train-labels.gz.dvc
hw_for_mlops/: infer.py  run_server.py  train.py
hw_for_mlops/conf/: config.yaml
hw_for_mlops/models/: model.py
hw_for_mlops/tools/: data.py  get_dataloader.py  infer_model.py  load_data.py  save_model.py  train_model.py
predictions/: .gitignore  test_result_onx.json.dvc
